# Sorcerer

./: .env.example  .gitignore  Cargo.toml  LICENSE  README.md  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: ci.yml  tests.yml
config/: dev.toml  prod.toml  sorcerer.toml
database/: schema.sql  seed_data.sql
database/migrations/: 001_initial_schema.sql  README.md
docker/: Dockerfile  docker-compose.prod.yml  docker-compose.yml
docs/: AGENTS.md  API.md  ARCHITECTURE.md  CONTRIBUTING.md  SETUP.md
python/: requirements.txt
python/sorcerer/: __init__.py
python/sorcerer/agent/: __init__.py  base.py  orchestrator.py
python/sorcerer/config/: __init__.py  loader.py
python/sorcerer/utils/: __init__.py  logging.py
python/tests/: __init__.py  conftest.py  test_agent.py
rust/: Cargo.toml
rust/sorcerer-core/: Cargo.toml
rust/sorcerer-core/src/: agent.rs  config.rs  error.rs  index.rs  lib.rs  query.rs  result.rs
rust/sorcerer-crawler/: Cargo.toml
rust/sorcerer-crawler/src/: crawler.rs  fetcher.rs  lib.rs
rust/sorcerer-search/: Cargo.toml
rust/sorcerer-search/src/: api.rs  handlers.rs  lib.rs
