[workspace]
members = [
    "rust/sorcerer-core",
    "rust/sorcerer-search",
    "rust/sorcerer-crawler",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Sorcerer Contributors"]
license = "MIT"

[workspace.dependencies]
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
sqlx = { version = "0.7", features = ["postgres", "uuid", "chrono", "runtime-tokio-native-tls"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
async-trait = "0.1"
