[package]
name = "sorcerer-search"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
sorcerer-core = { path = "../sorcerer-core" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
